added endpoint to recover a deleted user
