# lib/api/users.js
@@ -1320,6 +1320,7 @@ module.exports = (db, server, userHandler) => {
 
             const schema = Joi.object().keys({
                 user: Joi.string().hex().lowercase().length(24).required(),
+                deleteAfter: Joi.date().empty('').allow(false).default(false),
                 sess: sessSchema,
                 ip: sessIPSchema
             });
@@ -1346,7 +1347,7 @@ module.exports = (db, server, userHandler) => {
 
             let task;
             try {
-                task = await userHandler.delete(user, {});
+                task = await userHandler.delete(user, Object.assign({}, result.value));
             } catch (err) {
                 res.json({
                     error: err.message,
@@ -1364,6 +1365,66 @@ module.exports = (db, server, userHandler) => {
                     task || {}
                 )
             );
+            return next();
+        })
+    );
+
+    server.post(
+        '/users/:user/restore',
+        tools.asyncifyJson(async (req, res, next) => {
+            res.charSet('utf-8');
+
+            const schema = Joi.object().keys({
+                user: Joi.string().hex().lowercase().length(24).required(),
+                sess: sessSchema,
+                ip: sessIPSchema
+            });
+
+            const result = schema.validate(req.params, {
+                abortEarly: false,
+                convert: true
+            });
+
+            if (result.error) {
+                res.status(400);
+                res.json({
+                    error: result.error.message,
+                    code: 'InputValidationError',
+                    details: tools.validationErrors(result)
+                });
+                return next();
+            }
+
+            // permissions check
+            if (req.user && req.user === result.value.user) {
+                req.validate(roles.can(req.role).updateOwn('users'));
+            } else {
+                req.validate(roles.can(req.role).updateAny('users'));
+            }
+
+            let user = new ObjectID(result.value.user);
+
+            let task;
+            try {
+                task = await userHandler.restore(user, Object.assign({}, result.value));
+            } catch (err) {
+                res.json({
+                    error: err.message,
+                    code: err.code
+                });
+                return next();
+            }
+
+            res.json(
+                Object.assign(
+                    {
+                        success: !!task,
+                        code: task && task.task ? 'TaskCancelled' : 'RequestProcessed'
+                    },
+                    task || {}
+                )
+            );
+
             return next();
         })
     );
