# lib/user-handler.js
@@ -32,7 +32,8 @@ const {
     MFA_U2F_ENABLED,
     MFA_U2F_DISABLED,
     MFA_DISABLED,
-    USER_PASSWORD_CHANGED
+    USER_PASSWORD_CHANGED,
+    USER_DELETE_CANCELLED
 } = require('./events');
 
 const TOTP_SETUP_TTL = 6 * 3600 * 1000;
@@ -3322,8 +3323,8 @@ class UserHandler {
     }
 
     // This method deletes non-expiring records from database
-    async delete(user, meta) {
-        meta = meta || {};
+    async delete(user, options) {
+        options = options || {};
 
         // clear limits in Redis
         try {
@@ -3332,7 +3333,33 @@ class UserHandler {
             // ignore
         }
 
-        let result = {};
+        let result = {
+            user: user.toString()
+        };
+
+        // disable user account by moving it to another collection
+        let existingAccount = await this.users.collection('users').findOne({ _id: user });
+        if (existingAccount) {
+            existingAccount.deleteInfo = {
+                deletedAt: new Date(),
+                mainAddress: existingAccount.address
+            };
+
+            let addresses = await this.users.collection('addresses').find({ user }).toArray();
+            existingAccount.deleteInfo.addresses = addresses;
+
+            // is there somehow an old entry already present?
+            let existingDeleted = await this.users.collection('deletedusers').findOne({ _id: user });
+            if (existingDeleted) {
+                // remove it
+                await this.users.collection('deletedusers').deleteOne({ _id: user });
+            }
+
+            let r = await this.users.collection('deletedusers').insertOne(existingAccount);
+            if (r.insertedId) {
+                await this.users.collection('users').deleteOne({ _id: user });
+            }
+        }
 
         try {
             let delRes = await this.users.collection('addresses').deleteMany({ user });
@@ -3343,34 +3370,50 @@ class UserHandler {
             throw err;
         }
 
-        try {
-            let delRes = await this.users.collection('users').deleteOne({ _id: user });
-            result.users = { deleted: delRes.deletedCount };
-        } catch (err) {
-            log.error('USERDEL', 'Failed to delete user id=%s error=%s', user, err.message);
-            err.code = 'InternalDatabaseError';
-            throw err;
-        }
-
         // set up a task to delete user messages
         let now = new Date();
-        let insRes = await this.database.collection('tasks').insertOne({
-            task: 'user-delete',
-            locked: false,
-            lockedUntil: now,
-            created: now,
-            status: 'queued',
-            user
-        });
 
-        result.task = insRes.insertedId && insRes.insertedId.toString();
+        let deleteAfter = options.deleteAfter ? options.deleteAfter : now;
+
+        let existstingTask = await this.database.collection('tasks').findOne({ task: 'user-delete', user });
+        if (existstingTask) {
+            if (existstingTask.locked && existstingTask.status === 'pending') {
+                // can update scheduled time
+                let r = await this.database.collection('tasks').findOneAndUpdate(
+                    { _id: existstingTask._id, locked: true, status: 'pending' },
+                    {
+                        $set: {
+                            lockedUntil: deleteAfter
+                        }
+                    },
+                    { returnOriginal: false }
+                );
+
+                if (r && r.value) {
+                    existstingTask = r.value;
+                }
+            }
+            result.deleteAfter = existstingTask.lockedUntil.toISOString();
+            result.task = existstingTask._id.toString();
+        } else {
+            let insRes = await this.database.collection('tasks').insertOne({
+                task: 'user-delete',
+                locked: options.deleteAfter ? true : false,
+                lockedUntil: deleteAfter,
+                created: now,
+                status: options.deleteAfter ? 'pending' : 'queued',
+                user
+            });
+            result.deleteAfter = deleteAfter.toISOString();
+            result.task = insRes.insertedId && insRes.insertedId.toString();
+        }
 
         try {
             await this.logAuthEvent(user, {
                 action: 'delete user',
                 result: 'success',
-                sess: meta.session,
-                ip: meta.ip
+                sess: options.sess,
+                ip: options.ip
             });
         } catch (err) {
             // ignore
@@ -3378,6 +3421,125 @@ class UserHandler {
 
         await publish(this.redis, {
             ev: USER_DELETE_STARTED,
+            user,
+            result
+        });
+
+        return result;
+    }
+
+    // This method restores a user that is queued for deletion
+    async restore(user, options) {
+        options = options || {};
+
+        let result = {
+            user: user.toString()
+        };
+
+        let existstingTask = await this.database.collection('tasks').findOne({
+            task: 'user-delete',
+            user
+        });
+
+        if (existstingTask) {
+            result.task = existstingTask._id.toString();
+
+            if (existstingTask.status !== 'pending') {
+                let err = new Error('Deletion already in progress');
+                err.code = 'DeleteInProgress';
+                throw err;
+            }
+
+            let delRes = await this.database.collection('tasks').deleteOne({
+                _id: existstingTask._id,
+                status: 'pending'
+            });
+
+            if (!delRes.deletedCount) {
+                let err = new Error('Delete task not found');
+                err.code = 'RestoreTaskNotFound';
+                throw err;
+            }
+        }
+
+        let existingAccount = await this.users.collection('deletedusers').findOne({ _id: user });
+        if (!existingAccount) {
+            let err = new Error('Delete account was not found');
+            err.code = 'AccountNotFound';
+            throw err;
+        }
+
+        let accountDeleted = existingAccount.deleteInfo;
+        delete existingAccount.deleteInfo;
+
+        // Step 1. restore user entry
+        try {
+            existingAccount.address = ''; // clear for now, restore after address objects are sucessfully re-inserted
+            let r = await this.users.collection('users').insertOne(existingAccount);
+            if (r.insertedId) {
+                try {
+                    await this.users.collection('deletedusers').deleteOne({ _id: user });
+                } catch (err) {
+                    // actually we are not so much interested in this step as the user entry is already restored
+                }
+            }
+        } catch (err) {
+            if (err.code === 11000) {
+                // duplicate key
+                let err = new Error('Account was already restored');
+                err.code = 'AccountFound';
+                throw err;
+            }
+            throw err;
+        }
+
+        // Step 2. restore addresses
+        let recoveredAddresses = [];
+        for (let address of accountDeleted.addresses || []) {
+            try {
+                let r = await this.users.collection('addresses').insertOne(address);
+                if (!r || !r.insertedId) {
+                    throw new Error('Failed to insert');
+                }
+                recoveredAddresses.push(address);
+                log.info('Restore', 'ADDRRESTORE user=%s address=%s email=%s', user, address._id, address.address);
+            } catch (err) {
+                log.error('Restore', 'ADDRFAIL user=%s address=%s email=%s error=%s', user, address._id, address.address, err.message);
+            }
+        }
+
+        result.addresses = {
+            recovered: recoveredAddresses.length
+        };
+
+        // Step 3. restore main address
+        let mainAddress = recoveredAddresses.find(addr => addr.address === accountDeleted.mainAddress);
+        if (!mainAddress && recoveredAddresses.length) {
+            mainAddress = recoveredAddresses[0];
+        }
+
+        if (mainAddress) {
+            try {
+                await this.users.collection('users').updateOne({ _id: user }, { $set: { address: mainAddress.address } });
+            } catch (err) {
+                log.error('Restore', 'ADDRFAILMAIN user=%s address=%s email=% error=%s', user, mainAddress._id, mainAddress.address, err.message);
+            }
+            result.addresses.main = mainAddress.address;
+        }
+
+        try {
+            await this.logAuthEvent(user, {
+                action: 'restore user',
+                result: 'success',
+                sess: options.sess,
+                ip: options.ip
+            });
+        } catch (err) {
+            // ignore
+        }
+
+        await publish(this.redis, {
+            ev: USER_DELETE_CANCELLED,
             user,
             result
         });
